# pchealth

./: .gitignore  ANALISE.md  Cargo.toml  LICENSE  PROGRESSO.md  README.md  RESUMO.md  SETUP_SPEC.md  build.rs  tauri.conf.json
scripts/: make-pendrive.sh  push-to-github.sh  sign-hash.sh
src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  normalizer.rs  score.rs
src/collectors/: linux_only.rs  mod.rs  system_info.rs  windows_only.rs
ui/: index.html
ui/assets/: app.css  app.js
