[package]
name = "pbhealth"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Diagnóstico de saúde de hardware rodando do pendrive"
authors = ["PB Informática"]
license = "MIT"
repository = "https://github.com/pbinformatica/pbhealth"

[lib]
name = "pbhealth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri ---
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# --- Coleta ---
sysinfo = "0.39"
wmi = "0.18"
nvml-wrapper = "0.12"
cfg-if = "1"
once_cell = "1"

# --- DB local ---
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# --- Serialização ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async / paralelismo ---
tokio = { version = "1", features = ["full"] }
rayon = "1"
futures = "0.3"

# --- Utilitários ---
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"

# --- PDF (relatório) ---
genpdf = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]